style: fix carousel on mobile

--- a/css/partials/theme/_carousels.scss
+++ b/css/partials/theme/_carousels.scss
@@ -12,7 +12,8 @@
 			// filter: drop-shadow(0 0 40px white) drop-shadow(-60px -120px 40px white) drop-shadow(60px 20px 40px white) drop-shadow(0 0 40px white);
 			display: flex;
 			flex-direction: column;
-			padding-bottom: 4rem;
+			min-height: 480px;
+			padding-bottom: 6rem;
 			padding-top: 4rem;
 			position: relative;
 
@@ -56,7 +57,7 @@
 
 		.headline {
 			font-size: 3em;
-			font-weight: 500;
+			// font-weight: 500;
 			line-height: 1.2;
 			margin-bottom: 0.5rem;
 			text-shadow: 0 5px 10px white;
@@ -148,6 +149,8 @@
 			}
 
 			.content--short {
+				min-height: 340px;
+
 				&:after {
 					bottom: -40px;
 					left: -40px;
